chrome/global/colors.css
/* EdgeFr-Fox by bmFtZQ - colors.css */

/* light */
:root:not(:-moz-lwtheme) {
  --lwt-accent-color: #cecece !important;
  --lwt-accent-color-inactive: #e8e8e8 !important;
  --lwt-text-color: #000 !important;
  /*--toolbar-bgcolor: #f7f7f7 !important;*/
  --toolbar-color: #000 !important;
  --toolbarbutton-icon-fill: #000 !important;
  --chrome-content-separator-color: #bfbfbf !important;
  --lwt-toolbarbutton-icon-fill-attention: #0078D4 !important;
  --toolbarbutton-icon-fill-attention: #0078D4 !important;
  --lwt-tab-text: var(--toolbar-color) !important;
  --lwt-selected-tab-background-color: var(--toolbar-bgcolor) !important;
  --tab-selected-bgcolor: var(--toolbar-bgcolor) !important;
  --toolbar-field-background-color: #fff !important;
  --toolbar-field-color: #000 !important;
  --toolbar-field-border-color: #0000 !important;
  --toolbar-field-focus-background-color: var(--toolbar-field-background-color) !important;
  --toolbar-field-focus-color: var(--toolbar-field-color) !important;
  --toolbar-field-focus-border-color: #0055D7 !important;
  --urlbar-icon-fill-opacity: 1 !important;
  --urlbar-popup-url-color: #0072C9 !important;
  --lwt-brighttext-url-color: var(--urlbar-popup-url-color) !important;
  --urlbar-box-bgcolor: #f7f7f7 !important;
  --autocomplete-popup-background: #fff !important;
  --autocomplete-popup-color: #fff !important;
  --autocomplete-popup-highlight-background: #f2f2f2 !important;
  --autocomplete-popup-hover-background: #e5e5e5 !important;
  --autocomplete-popup-separator-color: #dadada00 !important;
  --toolbarbutton-hover-background: #e0e0e0 !important;
  --toolbarbutton-active-background: #d5d5d5 !important;
  --button-bgcolor: #EDEDED !important;
  --button-hover-bgcolor: #e5e5e5 !important;
  --button-active-bgcolor: #d5d5d5 !important;
  --button-primary-bgcolor: #0078D4 !important;
  --button-primary-hover-bgcolor: #006CBE !important;
  --button-primary-active-bgcolor: #1683D8 !important;
  --button-primary-color: #fff !important;
  --error-text-color: #FF9AA2 !important;
  --input-bgcolor: #fff !important;
  --input-color: #2b2b2b !important;
  --input-border-color: #bebebe !important;
  --input-error-border-color: #FF848A !important;
  --zoom-controls-bgcolor: #4A4A4A !important;
  --arrowpanel-background: #fff !important;
  --arrowpanel-color: #000 !important;
  --panel-description-color: #000a !important;
  --panel-disabled-color: #0009 !important;
  --arrowpanel-dimmed: #565656 !important;
  --arrowpanel-dimmed-further: #707070 !important;
  --panel-item-hover-bgcolor: #eee !important;
  --panel-item-active-bgcolor: #ddd !important;
  --arrowpanel-border-color: #dadada !important;
  --panel-separator-color: #dadada !important;
  --panel-banner-item-update-supported-bgcolor: #50B080 !important;
  --focus-outline-color: #0055D7 !important;
  --panel-shortcut-color: inherit !important;
  --uc-urlbar-shadow: 0 0 4px #0002;
}

/* dark */
:root[lwt-default-theme-in-dark-mode="true"] {
  --lwt-accent-color: #1C1C1C !important;
  --lwt-accent-color-inactive: #2e2e2e !important;
  --lwt-text-color: #E5E5E5 !important;
  --toolbar-bgcolor: #3B3B3B !important;
  --toolbar-color: #fff !important;
  --toolbarbutton-icon-fill: #fff !important;
  --chrome-content-separator-color: #686868 !important;
  --lwt-toolbarbutton-icon-fill-attention: #4C98D1 !important;
  --toolbarbutton-icon-fill-attention: #4C98D1 !important;
  --lwt-tab-text: var(--toolbar-color) !important;
  --lwt-selected-tab-background-color: var(--toolbar-bgcolor) !important;
  --tab-selected-bgcolor: var(--toolbar-bgcolor) !important;
  --toolbar-field-background-color: #2B2B2B !important;
  --toolbar-field-color: #fff !important;
  --toolbar-field-border-color: #0000 !important;
  --toolbar-field-focus-background-color: var(--toolbar-field-background-color) !important;
  --toolbar-field-focus-color: var(--toolbar-field-color) !important;
  --toolbar-field-focus-border-color: #63ADE5 !important;
  --urlbar-icon-fill-opacity: 1 !important;
  --urlbar-popup-url-color: #75B6E8 !important;
  --lwt-brighttext-url-color: var(--urlbar-popup-url-color) !important;
  --urlbar-box-bgcolor: #3B3B3B !important;
  --autocomplete-popup-background: #4A4A4A !important;
  --autocomplete-popup-color: #fff !important;
  --autocomplete-popup-highlight-background: #383838 !important;
  --autocomplete-popup-hover-background: #444444 !important;
  --autocomplete-popup-separator-color: #63636300 !important;
  --button-bgcolor: #3B3B3B !important;
  --button-hover-bgcolor: #545454 !important;
  --button-active-bgcolor: #606060 !important;
  --button-primary-bgcolor: #006CBE !important;
  --button-primary-hover-bgcolor: #0078D4 !important;
  --button-primary-active-bgcolor: #005CA3 !important;
  --button-primary-color: #fff !important;
  --error-text-color: #FF9AA2 !important;
  --input-bgcolor: #4A4A4A !important;
  --input-color: #fff !important;
  --input-border-color: #8A8A8A !important;
  --input-error-border-color: #FF848A !important;
  --zoom-controls-bgcolor: #4A4A4A !important;
  --arrowpanel-background: #4A4A4A !important;
  --arrowpanel-color: #fff !important;
  --panel-description-color: #fffb !important;
  --panel-disabled-color: #ABABAA !important;
  --arrowpanel-dimmed: #565656 !important;
  --arrowpanel-dimmed-further: #707070 !important;
  --panel-item-hover-bgcolor: #646464 !important;
  --panel-item-active-bgcolor: #747474 !important;
  --arrowpanel-border-color: #636363 !important;
  --panel-separator-color: #636363 !important;
  --panel-banner-item-update-supported-bgcolor: #50B080 !important;
  --focus-outline-color: #63ADE5 !important;
  --panel-shortcut-color: inherit !important;
}

/* Change Colour of page when loading */
:root:not(:-moz-lwtheme) #tabbrowser-tabpanels {
  background-color: #f7f7f7 !important;
}

:root[lwt-default-theme-in-dark-mode="true"] #tabbrowser-tabpanels {
  background-color: #252525 !important;
}

/* needed for theming the private browsing indicator  */
:root:not([style*="--button-primary-bgcolor"]) {
  --button-primary-bgcolor: unset !important;
  --button-primary-hover-bgcolor: unset !important;
  --button-primary-active-bgcolor: unset !important;
  --button-primary-color: unset !important;
}

/* make the titlebar buttons black/white on default themes */
:root:not(:-moz-lwtheme)[tabsintitlebar] .titlebar-buttonbox {
  color: #000 !important;
}

:root[lwt-default-theme-in-dark-mode="true"][tabsintitlebar] .titlebar-buttonbox {
  color: #fff !important;
}

